# counter-with-secp256k1

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Anchor.toml  package.json  tsconfig.eslint.json  tsconfig.json
programs/counter/: Cargo.toml
programs/counter/src/: error.rs  lib.rs
scripts/: bytes.ts
tests/: sign.test.ts
