[package]
name = "counter"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.0"
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
spl-token = "3.3.0"
spl-associated-token-account = "1.0.3"